# HEAL-SWIN-nnx

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
docs/notes/: 2026-07-12-conv-window-shift-variant.md
examples/: mnist_healpix_ablation.py  mnist_healpix_classify.py  mnist_healpix_classify_conv.py  mnist_healpix_classify_conv_results.txt  mnist_healpix_classify_results.txt  mnist_healpix_dataset.py  mnist_to_healpix.ipynb  projections.py  spherical_grf_flowmatch.py  spherical_grf_fm_quick_results.txt  spherical_grf_fm_results.txt
examples/sub/: mnist_healpix_ablation_a100.sub  mnist_healpix_classify.sub  mnist_healpix_classify_a100.sub  mnist_healpix_classify_conv_a100.sub  run_mnist_healpix_ablation.sh  run_mnist_healpix_classify.sh  run_mnist_healpix_classify_conv.sh  run_spherical_grf_flowmatch.sh  spherical_grf_flowmatch.sub
parity/: README.md  generate_goldens.py  pyproject.toml  reference-clamp-fix.patch  smoke_test.py
scripts/: bench_strategies.py
src/heal_swin_nnx/: __init__.py  config.py  hp_shifting.py  hp_topology.py  hp_windowing.py  layers.py  swin_hp_transformer.py  swin_transformer.py  variables.py  weight_transfer.py
tests/: parity_utils.py  test_buffers.py  test_dataspec.py  test_healconv.py  test_model.py  test_params.py  test_parity_e2e.py  test_parity_f64.py  test_parity_modules.py  test_precision.py  test_rope.py  test_seam_geometry.py  test_shifting.py  test_topology.py  test_windowing.py
tests/goldens/: flat_ape.npz  flat_base.npz  flat_base_f64.npz  flat_cos_v2.npz  flat_cos_v2_f64.npz  flat_nomask.npz  flat_norelbias.npz  hp_ape.npz  hp_base.npz  hp_base_f64.npz  hp_cos_v2.npz  hp_cos_v2_f64.npz  hp_grid.npz  hp_relbias.npz  hp_ring.npz  hp_ring_f64.npz  indices.npz  leaf_flat_attn.npz  leaf_flat_attn_cos.npz  leaf_flat_attn_norelbias.npz  leaf_flat_block_nomask.npz  leaf_flat_block_noshift.npz  leaf_flat_block_shift.npz  leaf_flat_final_expand.npz  leaf_flat_patch_embed.npz  leaf_flat_patch_expand.npz  (+13 more)
(+28 files in other folders)
