[build-system]
requires = ["uv_build>=0.9,<1"]
build-backend = "uv_build"

[project]
name = "heal-swin-nnx"
version = "0.1.0"
description = "JAX/Flax NNX port of HEAL-SWIN (spherical HEALPix SWIN-UNet) with golden-value parity against the PyTorch reference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "flax>=0.12.7",
    "healpy>=1.19.0",
    "jax[cuda12]>=0.10.2",
    "numpy>=2.5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
