[build-system]
requires = ["uv_build>=0.9,<1"]
build-backend = "uv_build"

[project]
name = "heal-swin-nnx"
version = "0.1.0"
description = "HealSwin: spherical HEALPix Swin V2 U-Net in JAX/Flax NNX, with RoPE and seam-exact shifted windows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "flax>=0.12.7",
    "healpy>=1.19.0",
    "jax[cuda12]>=0.10.2",
    "numpy>=2.5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n 2"
env = [
    "JAX_PLATFORMS=cpu"
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-env>=1.6.0",
    "pytest-xdist>=3.8.0",
]

[project.optional-dependencies]
examples = [
    "grain>=0.2.18",
    "notebook>=7.6.0",
    "datasets>=5.0.0",
]
