[project]
name = "heal-swin-parity"
version = "0.1.0"
description = "Legacy torch env for generating HEAL-SWIN golden parity fixtures"
requires-python = ">=3.8,<3.9"
dependencies = [
    "torch==1.8.0+cpu",
    "torchvision==0.9.0+cpu",
    "timm==0.4.12",
    "einops==0.4.0",
    "healpy==1.15.2",
    "numpy==1.19.2",
    "scipy==1.6.0",
    "matplotlib==3.3.4",
    "astropy==5.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
